# a2ui

.gemini/: GEMINI.md
.github/workflows/: editor_build.yml  lit_samples_build.yml  ng_build_and_test.yml  web_build_and_test.yml
angular/: README.md  package-lock.json  package.json
angular/projects/a2a-chat-canvas-demo/: README.md
angular/projects/lib/: package.json
angular/projects/rizzcharts/: README.md
angular/projects/rizzcharts/src/app/: theme.ts
renderers/lit/src/0.8/ui/: image.ts  root.ts  text.ts
samples/agent/adk/: pyproject.toml
samples/agent/adk/real_estate_agent/: .env.example  README.md  __main__.py  agent.py  agent_executor.py  deployment_stability_guide.md  genai_utils.py  prompt_builder.py  pyproject.toml  tools.py
samples/agent/adk/restaurant_finder/: agent.py
samples/agent/adk/rizzcharts/: agent_executor.py
samples/client/angular/: package-lock.json
samples/client/angular/projects/orchestrator/src/: server.ts
samples/client/lit/: package-lock.json
samples/client/lit/shell/: app.ts  client.ts
samples/client/lit/shell/configs/: real_estate.ts
specification/0.9/eval/: GEMINI.md  package-lock.json  package.json
specification/0.9/eval/src/: basic_schema_matcher.ts  flows.ts  index.ts  logger.ts  prompts.ts  surface_update_schema_matcher.ts  validator.ts
specification/0.9/json/: common_types.json  contact_form_example.jsonl  server_to_client.json  standard_catalog_definition.json
web/src/0.8/data/: model-processor.ts
web/src/editor/: editor.ts
web/src/editor/ui/: item-select.ts
